--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ h1, h2 {
 
 input {
   padding: 0.5em;
-  margin: 0.5em 0;
   width: 100%;
   max-width: 300px;
 }
@@ -30,37 +29,6 @@ li {
   margin: 0.2em 0;
   border-radius: 4px;
 }
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0px;
-  background-color: #f0f0f0;
-  border-bottom: 1px solid #ccc;
-}
-
-header h1 {
-  margin: 0;
-  text-align: center;
-  flex: 1;
-  font-size: 1em;
-}
-
-.header-btn {
-  flex: 0 0 100px;
-  text-align: center;
-}
-
-header button {
-  background-color: #eee;
-  border: 1px solid #ccc;
-  padding: 6px 12px;
-  cursor: pointer;
-  border-radius: 4px;
-  font-size: 0.9em;
-}
-
 
 #selettore-sezione {
   display: flex;
@@ -102,7 +70,7 @@ header button {
   border-radius: 6px;
   min-width: 120px;
   flex: 1;
-  max-width: 180px;
+  max-width: 13rem;
   box-sizing: border-box;
 }
 
